Testing out game loop

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <script src="./server.js"></script>
     <script src="./client.js"></script>
     <script src="./ui.js"></script>
+    <script src="./game.js"></script>
   </head>
   <body>
     <h1>RTC Connect</h1>
+
+    <canvas id="canvas" width="200px" height="50px" style="border: 1px solid black;"></canvas>
 
 
     <h2>Server</h2>
