--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <script src="./server.js"></script>
     <script src="./client.js"></script>
     <script src="./ui.js"></script>
-    <script src="./game.js"></script>
+    <script src="./game/common.js"></script>
+    <script src="./game/server.js"></script>
+    <script src="./game/client.js"></script>
   </head>
   <body>
     <h1>RTC Connect</h1>
